k1s-svc.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: k1s
spec:
  ports:
    - protocol: TCP
      port: 1372
      targetPort: 1372
  selector:
    app: k1s
